<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stone.actionbar.MainActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        android:orderInCategory="6"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />  <!-- 使用兼容ShareActionProvider -->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <!-- showAsAction 在 studio中，因引用外部库定义的属性， 需要声明namespace
         统一以 res-auto 结尾，即 xmlns:app="http://schemas.android.com/apk/res-auto" -->
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" /> <!-- android:icon="@android:drawable/ic_menu_search" -->
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@android:drawable/ic_menu_delete"
        android:title="delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_call"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/action_call"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@android:drawable/ic_menu_edit"
        android:title="edit"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_day"
        android:icon="@android:drawable/ic_menu_day"
        android:title="day"
        android:actionLayout="@layout/progress"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:title="crop"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item
        android:icon="@android:drawable/ic_menu_camera"
        android:title="camera"
        app:showAsAction="withText|always"
        android:orderInCategory="2"/>
    <item
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="agenda含子项"
        app:showAsAction="always|withText" >
        <menu>
            <item
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="agenda子项1"
            app:showAsAction="always" />
            <item
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="agenda子项2"
            app:showAsAction="ifRoom|collapseActionView" />
        </menu>
    </item>




    <!--<item-->
        <!--android:icon="@android:drawable/ic_menu_agenda"-->
        <!--android:title="agenda"-->
        <!--app:showAsAction="withText|always" />-->
    <!--<item-->
        <!--android:icon="@android:drawable/ic_menu_agenda"-->
        <!--android:title="agenda"-->
        <!--app:showAsAction="withText|always" />-->
</menu>
